Fixing issues of Logo alignment & Font style of button

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,6 @@
 .Navbar{
     background-color: #34C94B;
     height:74px;
-    padding: 0 32px;
     display: flex;
     align-items: center;
     justify-content: space-between;
